# ocaml-rdf

./: .gitignore  .travis.yml  README.md  dune-project  index.html  rdf.opam
.github/workflows/: docs.yml
lib/: bnode.ml  bnode.mli  dune  graph.ml  graph.mli  iri.ml  iri.mli  literal.ml  literal.mli  triple.ml  triple.mli  xsd.ml  xsd.mli
lib/ntriples/: dune  io.ml  io.mli  lexer.mll  ntriples.ml  ntriples.mli  ntriples_lexer.mll  ntriples_parser.mly  parser.mly
rdf/: index.html
rdf/Ntriples/: index.html
rdf/Ntriples/Io/: index.html
rdf/Ntriples/Lexer/: index.html
rdf/Ntriples/Parser/: index.html
rdf/Rdf/: index.html
rdf/Rdf/Bnode/: index.html
rdf/Rdf/Graph/: index.html
rdf/Rdf/Iri/: index.html
rdf/Rdf/Literal/: index.html
rdf/Rdf/Ntriples/: index.html
rdf/Rdf/Ntriples_lexer/: index.html
rdf/Rdf/Ntriples_parser/: index.html
rdf/Rdf/Triple/: index.html
rdf/Rdf/Xsd/: index.html
rdf/Rdf__Bnode/: index.html
rdf/Rdf__Graph/: index.html
rdf/Rdf__Iri/: index.html
rdf/Rdf__Literal/: index.html
rdf/Rdf__Ntriples/: index.html
rdf/Rdf__Ntriples_lexer/: index.html
rdf/Rdf__Ntriples_parser/: index.html
rdf/Rdf__Triple/: index.html
rdf/Rdf__Xsd/: index.html
test/: bnode.ml  dune  literal.ml  runtest.ml  triple.ml
test/.github/workflows/: test.yml
test/ntriples/: dune  io.ml  ntriples.ml  runtest.ml
test/ntriples/data/: grammar_error.nt  graph.nt  syntax_error.nt  unicode.nt
